xdg-desktop-portal-lxqt (0.5.0-0ubuntu1) noble; urgency=medium

  * New upstream release.
  * Overhauled copyright file.
  * Bump build dependency versions.

 -- Aaron Rainbolt <arraybolt3@gmail.com>  Sun, 12 Nov 2023 21:02:39 -0600

xdg-desktop-portal-lxqt (0.4.0-0ubuntu2) mantic; urgency=medium

  * Add a Provides for xdg-desktop-portal-backend (LP: #2036098).

 -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 22 Sep 2023 11:51:42 -0500

xdg-desktop-portal-lxqt (0.4.0-0ubuntu1) mantic; urgency=medium

  * New upstream release.
  * Bump build dependencies.
  * Bump Standards-Version to 4.6.2, no changes needed.
  * Update copyright years.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 11 Aug 2023 09:52:50 -0500

xdg-desktop-portal-lxqt (0.3.0-0ubuntu4) lunar; urgency=medium

  * No-change rebuild against libfm-qt 1.2.1.

 -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Fri, 27 Jan 2023 15:53:17 -0600

xdg-desktop-portal-lxqt (0.3.0-0ubuntu3) lunar; urgency=medium

  * No-change rebuild against Qt 5.15.8.

 -- Dmitry Shachnev <mitya57@ubuntu.com>  Sat, 14 Jan 2023 13:11:35 +0300

xdg-desktop-portal-lxqt (0.3.0-0ubuntu2) lunar; urgency=medium

  * No-change rebuild against Qt 5.15.7.

 -- Dmitry Shachnev <mitya57@ubuntu.com>  Sat, 10 Dec 2022 16:01:01 +0300

xdg-desktop-portal-lxqt (0.3.0-0ubuntu1) lunar; urgency=medium

  * New upstream release.
  * Fix the watch file, for real this time.
  * Lubuntuify the package slightly, to make debhelper happy.
  * Bump build dependencies in debian/control.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 18 Nov 2022 19:16:03 -0600

xdg-desktop-portal-lxqt (0.2.0-0ubuntu2) kinetic; urgency=medium

  * Removed redundant "Repository-Browser" field from d/upstream/metadata.
  * Removed obsolete "-Wl,--as-needed" linker flag.
  * Added "Rules-Requires-Root: no" to debian/control.

 -- Aaron Rainbolt <arraybolt3@gmail.com>  Fri, 15 Jul 2022 13:40:41 -0500

xdg-desktop-portal-lxqt (0.2.0-0ubuntu1) kinetic; urgency=medium

  * Initial release.
